2002-10-11  Michel Six  <msix@ccr.jussieu.fr>
	    Alan Modra  <amodra@bigpond.net.au>

	* config/tc-i386.c (output_jump): Set fx_signed for loop/jcxz.
	(md_estimate_size_before_relax): Likewise for 8 bit branches.

Thu Oct 10 14:31:30 2002  J"orn Rennecke <joern.rennecke@superh.com>

	* config/tc-sh.c (assemble_ppi): Initialize reg_x / reg_y / reg_n
	inside loop.

2002-10-09  Richard Shann <richard.shann@superh.com>
	    Stephen Clarke <stephen.clarke@superh.com>

	* config/tc-sh64.c (sh64_target_format): Add support for sh64
	Linux environment.

2002-10-03  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* contig/tc-sh.c (sh_local_pcrel): New.
	(sh_force_relocation): Use sh_local_pcrel.
	(md_pcrel_from_section): Check the relocation type whether it
	should be resolved locally. Use S_FORCE_RELOC.

2002-10-01  Alan Modra  <amodra@bigpond.net.au>

	* config/tc-mips.h (TC_FORCE_RELOCATION_SUB_SAME): Define.
	(TC_FORCE_RELOCATION): Tidy arg.

2002-09-30  Gavin Romig-Koch  <gavin@redhat.com>
	    Ken Raeburn  <raeburn@cygnus.com>
	    Aldy Hernandez  <aldyh@redhat.com>
	    DJ Delorie  <dj@redhat.com>
	    Michael Meissner  <meissner@redhat.com>
	    Eric Christopher  <echristo@redhat.com>
	    Richard Sandiford  <rsandifo@redhat.com>

	* doc/c-mips.texi: Add entries for -march=vr4120,vr4130,vr4181,
	vr5400 and vr5500.  Add entry for -mfix-vr4122-bugs.
	* config/tc-mips.c (CPU_HAS_DROR, CPU_HAS_ROR): New macros.
	(hilo_interlocks): True for CPU_VR5500.
	(gpr_interlocks, cop_interlocks): True for CPU_VR5400 and CPU_VR5500.
	(mips_fix_vr4122_bugs): New.
	(append_insn): Work around 4122 errors if mips_fix_vr4122_bugs.
	(mips_emit_delays): Likewise.
	(macro2) [M_DROLI]: Use dror or dror32 if CPU_HAS_DROR.
	[M_ROLI]: Likewise ror if CPU_HAS_ROR.
	(validate_mips_insn, mips_ip): Handle '[', ']', 'e' and '%'.
	(OPTION_FIX_VR4122, OPTION_NO_FIX_VR4122): New options.
	(md_longopts): Add -mfix-vr4122-bugs and -no-mfix-vr4122-bugs.
	(OPTION_ELF_BASE): Bump.